name:                SMBC
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/EoinDavey/SMBC#readme
license:             BSD3
license-file:        LICENSE
author:              Eoin Davey
maintainer:          eoind@vey.ie
copyright:           2016 Eoin Davey
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable SMBC-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                      ,SMBC
                      ,connection
                      , hxt, HandsomeSoup, http-conduit, bytestring
                      , split, async, directory
  default-language:    Haskell2010

test-suite SMBC-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , SMBC
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/EoinDavey/SMBC
